[FIX/#103] 추천 로직 오류 수정  (#106)
## 🔗 Related Issue
<!-- 이슈 번호를 작성하여 종료시켜주세요 -->
- Closes #103 

## 📝 Summary
<!-- 작업한 기능을 설명해주세요 -->
- 추천 로직 비동기 전환 
- 응답 구조 개선 및 에러 핸들링 강화 
- DTO 구조 개선 
- 추천 업데이트 로직을 금융 mbti 내부로 통합 

## 🔄 Changes
<!-- 구체적으로 어떤 파일/로직이 변경되었는지 체크해주세요 -->
- [X] API 변경 (추가/수정)
- [ ] 데이터 및 도메인 변경 (DB, 비즈니스 로직)
- [ ] 설정 또는 인프라 관련 변경
- [ ] 리팩토링

## 💬 Questions & Review Points
<!-- 리뷰어가 특별히 봐주었으면 하는 부분이 있다면 작성해주세요 -->

## 📸 API Test Results (Swagger)
<!-- API 테스트 스크린샷 첨부 -->

## ✅ Checklist
- [ ] API 테스트 완료
- [ ] 테스트 결과 사진 첨부
- [ ] 빌드 성공 확인 (./gradlew build)